# PyImage

./: .gitignore  pyproject.toml
jupyternotebooks/: dask_array_scaling.ipynb  mask_to_polygons.ipynb
pygeojson/CLI/: mask_to_polygons.py
pygeojson/python/: mask_to_polygons.py
pyimg/CLI/: downscale_image.py  downscale_image_dask.py  downscale_pyramidize_image_dask.py  expand_mask.py  expand_mask_singlemask.py  pyramidize.py  pyramidize_ome_tif.py  quant.py  rasterize_poly_to_mask.py
pyimg/python/: rescale_dask.py
testdata/blobs.zarr/: zmetadata
testdata/blobs.zarr/points/blobs_points/points.parquet/: part.0.parquet
testdata/blobs.zarr/shapes/blobs_circles/: shapes.parquet
testdata/blobs.zarr/shapes/blobs_multipolygons/: shapes.parquet
testdata/blobs.zarr/shapes/blobs_polygons/: shapes.parquet
testdata/blobs.zarr/tables/table/X/data/: 0
