[project]
authors = [{name = "Jose Nimo", email = "nimojose@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "PyImage"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pyimage = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
loguru = ">=0.7.2,<0.8"
scikit-image = ">=0.25.0,<0.26"
tifffile = ">=2024.12.12,<2025"
czifile = ">=2019.7.2,<2020"
ome-types = ">=0.5.3,<0.6"
numpy = ">=2.2.1,<3"
zarr = ">=2.18.4,<3"
tqdm = "*"
natsort = "*"
matplotlib = "*"
jupyter = ">=1.1.1,<2"
dask = ">=2024.12.1,<2025"
dask-image = ">=2024.5.3,<2025"
